--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     />
     <meta
       property="og:image"
-      content="https://ptiikippgribojonegoro.github.io/kayanganapi/kkm-kayanganapi.png"
+      content="https://sendangharjo.github.io/kayanganapi/kkm-kayanganapi.png"
     />
     <meta
       property="og:url"
-      content="https://ptiikippgribojonegoro.github.io/kayanganapi"
+      content="https://sendangharjo.github.io/kayanganapi"
     />
 
     <!-- Twitter Meta Tags -->
@@ -55,7 +55,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://ptiikippgribojonegoro.github.io/kayanganapi/kkm-kayanganapi.png"
+      content="https://sendangharjo.github.io/kayanganapi/kkm-kayanganapi.png"
     />
 
     <!-- Icons -->
@@ -100,8 +100,8 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/kayanganapi/app/js/index-CdqgzXxa.js"></script>
-    <link rel="stylesheet" crossorigin href="/kayanganapi/app/css/index-Qva9jA6w.css">
+    <script type="module" crossorigin src="/kayanganapi/app/js/index-u_0g9rku.js"></script>
+    <link rel="stylesheet" crossorigin href="/kayanganapi/app/css/index-CqhWkWwb.css">
   </head>
   <body class="index-page bg-light">
     <div id="KayanganApiApp"></div>
