--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#E63946" />
     <!-- Title -->
     <title>
-      Kayangan Api - Digitalisasi Budaya & Desa | KKM 2025 IKIP PGRI Bojonegoro
+      Kayangan Api - Digitalisasi Desa & Budaya | KKM 2025 IKIP PGRI Bojonegoro
     </title>
 
     <!-- Meta Description -->
@@ -100,7 +100,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/kayanganapi/app/js/index-u_0g9rku.js"></script>
+    <script type="module" crossorigin src="/kayanganapi/app/js/index-517tITdY.js"></script>
     <link rel="stylesheet" crossorigin href="/kayanganapi/app/css/index-CqhWkWwb.css">
   </head>
   <body class="index-page bg-light">
