--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Kayangan Api Digital - KKM 2025 IKIP PGRI Bojonegoro"
+      content="Kayangan Api - Digitalisasi Desa & Budaya | KKM 2025 IKIP PGRI Bojonegoro"
     />
     <meta
       property="og:description"
@@ -47,7 +47,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Kayangan Api Digital - KKM 2025 IKIP PGRI Bojonegoro"
+      content="Kayangan Api - Digitalisasi Desa & Budaya | KKM 2025 IKIP PGRI Bojonegoro"
     />
     <meta
       name="twitter:description"
@@ -100,7 +100,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/kayanganapi/app/js/index-517tITdY.js"></script>
+    <script type="module" crossorigin src="/kayanganapi/app/js/index-Bvw4-GCf.js"></script>
     <link rel="stylesheet" crossorigin href="/kayanganapi/app/css/index-CqhWkWwb.css">
   </head>
   <body class="index-page bg-light">
