--- a/index.html
+++ b/index.html
@@ -1,99 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=480, user-scalable=no" />
-  <meta name="theme-color" content="#0d6efd" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=480, user-scalable=no" />
+    <meta name="theme-color" content="#E63946" />
+    <!-- Title -->
+    <title>
+      Kayangan Api - Wisata Alam Desa Sendangharjo | KKM 2025 IKIP PGRI
+      Bojonegoro
+    </title>
 
-  <!-- Title -->
-  <title>Desa Sendangharjo, Ngasem Bojonegoro | Digitalisasi Desa | KKM 2025 | IKIP PGRI Bojonegoro</title>
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Wisata Kayangan Api di Desa Sendangharjo, Ngasem, Bojonegoro, menghadirkan keajaiban api abadi yang tak pernah padam. KKM 2025 IKIP PGRI Bojonegoro mendukung digitalisasi wisata desa menuju transformasi digital dan desa cerdas."
+    />
 
-  <!-- Meta Description -->
-  <meta name="description" content="Desa Sendangharjo, Ngasem, Bojonegoro menuju desa cerdas lewat digitalisasi. Proyek KKM 2025 IKIP PGRI memadukan teknologi dan kearifan lokal.">
+    <!-- Meta Keywords -->
+    <meta
+      name="keywords"
+      content="Kayangan Api, Wisata Kayangan Api, Desa Sendangharjo, Wisata Bojonegoro, Api Abadi, Wisata Alam Bojonegoro, Digitalisasi Desa, Desa Cerdas, Transformasi Digital, KKM 2025, IKIP PGRI Bojonegoro"
+    />
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="Desa Sendangharjo, Sendangharjo Ngasem, Bojonegoro, Kecamatan Ngasem, Digitalisasi Desa, Desa Cerdas, Desa Wisata, UMKM Desa, Kearifan Lokal, KKM 2025 IKIP PGRI Bojonegoro, Teknologi Desa, Website Desa, Wisata Kayangan Api, Wisata Bojonegoro, Produk Unggulan Desa, Desa Pintar, Transformasi Digital Desa">
+    <meta name="author" content="LoisPoetra - IKIP PGRI Bojonegoro" />
+    <meta name="robots" content="index, follow" />
 
-  <meta name="author" content="LoisPoetra - IKIP PGRI Bojonegoro">
-  <meta name="robots" content="index, follow">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Kayangan Api - Wisata Alam Desa Sendangharjo | KKM 2025 IKIP PGRI Bojonegoro"
+    />
+    <meta
+      property="og:description"
+      content="Wisata Kayangan Api di Desa Sendangharjo, Bojonegoro, menghadirkan keajaiban api abadi yang tak pernah padam. KKM 2025 IKIP PGRI Bojonegoro mendukung digitalisasi wisata desa menuju transformasi digital dan desa cerdas."
+    />
+    <meta
+      property="og:image"
+      content="https://sendangharjo.github.io/kayanganapi/kkm-logo.png"
+    />
+    <meta
+      property="og:url"
+      content="https://sendangharjo.github.io/kayanganapi/"
+    />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Desa Sendangharjo, Ngasem Bojonegoro | Digitalisasi Desa | KKM 2025 | IKIP PGRI Bojonegoro">
-  <meta property="og:description" content="Desa Sendangharjo di Kecamatan Ngasem, Bojonegoro, menuju desa cerdas melalui digitalisasi. Proyek KKM 2025 IKIP PGRI memadukan teknologi dan kearifan lokal.">
-  <meta property="og:image" content="https://sendangharjo.github.io/kkm-logo.png">
-  <meta property="og:url" content="https://sendangharjo.github.io/">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Kayangan Api - Wisata Alam Desa Sendangharjo | KKM 2025 IKIP PGRI Bojonegoro"
+    />
+    <meta
+      name="twitter:description"
+      content="Wisata Kayangan Api di Desa Sendangharjo, Bojonegoro, menghadirkan keajaiban api abadi yang tak pernah padam. KKM 2025 IKIP PGRI Bojonegoro mendukung digitalisasi wisata desa menuju transformasi digital dan desa cerdas."
+    />
+    <meta
+      name="twitter:image"
+      content="https://sendangharjo.github.io/kayanganapi/kkm-logo.png"
+    />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Desa Sendangharjo, Ngasem Bojonegoro | Digitalisasi Desa | KKM 2025 | IKIP PGRI Bojonegoro">
-  <meta name="twitter:description" content="Desa Sendangharjo di Kecamatan Ngasem, Bojonegoro, menuju desa cerdas melalui digitalisasi. Proyek KKM 2025 IKIP PGRI memadukan teknologi dan kearifan lokal.">
-  <meta name="twitter:image" content="https://sendangharjo.github.io/kkm-logo.png">
+    <!-- Icons -->
+    <link rel="icon" href="/kayanganapi/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/kayanganapi/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/kayanganapi/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/kayanganapi/favicon-16x16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/kayanganapi/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/kayanganapi/android-chrome-512x512.png"
+    />
+    <link rel="manifest" href="/kayanganapi/site.webmanifest" />
 
-  <!-- Icons -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
-  <link rel="manifest" href="/site.webmanifest">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "url": "https://sendangharjo.github.io/tentang/",
-    "logo": "https://sendangharjo.github.io/kkm-logo.png",
-    "name": "Desa Sendangharjo"
-  }
-  </script>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "url": "https://sendangharjo.github.io/kayanganapi/",
-    "name": "Website Tentang Desa Sendangharjo"
-  }
-  </script>
-
-  <!-- Redirect untuk manusia, tidak untuk Googlebot -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var isBot = /Googlebot|Bingbot|Slurp|DuckDuckBot|Baiduspider|YandexBot/i.test(navigator.userAgent);
-      if (!isBot) {
-        setTimeout(function () {
-          window.location.href = "https://sendangharjo.github.io/tentang/";
-        }, 1500);
-      }
-    });
-  </script>
-</head>
-
-<body class="bg-light d-flex align-items-center justify-content-center vh-100">
-  <div class="text-center p-4">
-    <img src="https://sendangharjo.github.io/kayanganapi/kkm-logo.png" alt="KKM 2025 - IKIP PGRI Bojonegoro - Desa Sendangharjo" class="mb-4" style="max-width:120px;">
-    <h2 class="mb-3 fw-bold">Desa Sendangharjo</h2>
-    <p class="mb-4">
-      Portal digitalisasi <strong>Desa Sendangharjo, Ngasem, Bojonegoro</strong>.  
-      Program Kerja <strong>KKM 2025 IKIP PGRI Bojonegoro</strong> menggabungkan inovasi teknologi
-      yang selaras dengan kearifan lokal untuk mewujudkan <em>Desa Cerdas</em> yang maju,
-      berdaya saing, dan berkelanjutan.
-      <br><br>
-      Anda akan dialihkan secara otomatis ke website tentang Desa Sendangharjo:
-      <a href="https://sendangharjo.github.io/tentang/" class="fw-bold text-decoration-none">
-        Tentang Desa Sendangharjo
-      </a>
-    </p>
-    <div class="spinner-border text-success" role="status">
-      <span class="visually-hidden">Loading...</span>
-    </div>
-  </div>
-</body>
-
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script type="module" crossorigin src="/kayanganapi/app/js/index-CLkGrBDJ.js"></script>
+    <link rel="stylesheet" crossorigin href="/kayanganapi/app/css/index-C8g16ekC.css">
+  </head>
+  <body class="index-page bg-light">
+    <div id="KayanganApiApp"></div>
+  </body>
 </html>
