--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#E63946" />
     <!-- Title -->
     <title>
-      Kayangan Api - Wisata Alam Desa Sendangharjo | KKM 2025 IKIP PGRI
+      Kayangan Api | Desa Sendangharjo, Ngasem, Bojonegoro | KKM 2025 IKIP PGRI
       Bojonegoro
     </title>
 
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Kayangan Api - Wisata Alam Desa Sendangharjo | KKM 2025 IKIP PGRI Bojonegoro"
+      content="Kayangan Api | Desa Sendangharjo, Ngasem, Bojonegoro | KKM 2025 IKIP PGRI Bojonegoro"
     />
     <meta
       property="og:description"
@@ -48,7 +48,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Kayangan Api - Wisata Alam Desa Sendangharjo | KKM 2025 IKIP PGRI Bojonegoro"
+      content="Kayangan Api | Desa Sendangharjo, Ngasem, Bojonegoro | KKM 2025 IKIP PGRI Bojonegoro"
     />
     <meta
       name="twitter:description"
@@ -101,7 +101,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/kayanganapi/app/js/index-BVzd44L1.js"></script>
+    <script type="module" crossorigin src="/kayanganapi/app/js/index-CK2XVIr3.js"></script>
     <link rel="stylesheet" crossorigin href="/kayanganapi/app/css/index-C8g16ekC.css">
   </head>
   <body class="index-page bg-light">
